--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -99,21 +99,21 @@
                       </ul>-->
                   </li> 
                   
-                  <li class="has-submenu ">
+                  <li class=" has-submenu ">
                       <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
                       <!-- MENU DE NORMAL -->
   
-                      <ul class="submenu megamenu" style="background-color: #bebebe;">
+                      <ul class=" menuGeneral submenu megamenu" style="background-color: #ffffff;">
                         <li>
                           <div class="contenedor1 " style="background-color: #ffffff ">
                           <ul>
-                            <li class="megamenu-head "  style="color: red !important; ">CASA MATERSANT</li>
+                            <li class="casamatersant megamenu-head " style="color: white !important;" >CASA MATERSANT</li>
                             <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
                             <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
                             <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
                             <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
                             <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
-                            <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
+                            <li><a class="nav-link-ref" routerLink="/index-upcycle">NFT</a></li>
                           </ul>
                         </div>
                         </li>
@@ -121,7 +121,7 @@
                         <li>
                           <div class="contenedor2" style="background-color: #ffffff ">
                           <ul>
-                            <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
+                            <li class="materiacurada megamenu-head"  style="color: white !important;" >MATERIA CURADA</li>
                             <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
                             <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
                             <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
@@ -129,10 +129,7 @@
                         </div>
                         </li>
                       </ul>
-  
-                      <!-- MENU DE MOVIL -->
-  
-  
+
   
                     </li>
                 
@@ -141,54 +138,35 @@
                     <!-- MENU DE NORMAL -->
 
                     <ul class="submenu megamenu" style="background-color: #bebebe;">
-                      <li>
-                        <div class="contenedor1 " style="background-color: #ffffff ">
-                        <ul>
-                          <li class="megamenu-head "  style="color: red !important; ">CASA MATERSANT</li>
-                          <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
-                          <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
-                          <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
-                          <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
-                          <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
-                          <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
-                        </ul>
-                      </div>
-                      </li>
-
-                      <li>
-                        <div class="contenedor2" style="background-color: #ffffff ">
-                        <ul>
-                          <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
-                          <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
-                          <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
-                          <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
-                        </ul>
-                      </div>
-                      </li>
 
                       <li>
                         <div class="contenedor3" style="background-color: #ffffff ">
                         <ul>
-                          <li class="megamenu-head"   style="color: #2b2d91 !important; " >PRODUCT DESIGN</li>
+                          <li class="productdesign megamenu-head"  style="color: white !important;" >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
-                          <li><a class="nav-link-ref" routerLink="/custome-made">CUSTOME-MADE</a></li>
+                          <li><a class="nav-link-ref" routerLink="/custome-made">CUSTOM-MAKE YOUR OWN PIECE</a></li>
                         </ul>
                       </div>
                       </li>
                       <li>
                         <div class="contenedor4" style="background-color: #ffffff ">
                         <ul>
-                          <li class="megamenu-head"  style="color: #4aac91 !important; " >INTERIOR DESIGN</li>
+                          <li class="interiordesign megamenu-head"   style="color: white !important;" >INTERIOR DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
-                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">BOOK AN APPOINTMENT</a></li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">CREATE YOUR DREAM SPACE</a></li>
                         </ul>
                       </div>
                       </li>
                       <li>
                         <div class="contenedor5" style="background-color: #ffffff ">
                         <ul>
-                          <li> <a class="nav-link-ref" style="color: #051b06 !important ;  " routerLink="/custome-made">CUSTOME MADE</a>
-                             </li>
+                          <li class="art megamenu-head"  style="color: white !important;">ART</li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">COMMISION ART</a>
+
+                          <li> 
+                            
+                          </li>
                         </ul>
                       </div>
                       </li>
