--- a/src/app/core/components/shop-product-detail/shop-product-detail.component.css
+++ b/src/app/core/components/shop-product-detail/shop-product-detail.component.css
@@ -1,3 +1,45 @@
 .padding{
     padding-bottom: 25%;
 }
+.botones{
+    text-decoration: none;
+    border: 1px solid #000;
+    padding: 0.5em 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.075em;
+    width: 17em;
+    font-size: 85%;
+    text-align: center;
+    margin: 0.25em 0;
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        background-image: none;
+        background: transparent;
+        background-color: transparent;
+        color: inherit;
+        outline: none;
+        padding: 0.25em 1em;
+        border: 1px solid #000;
+        text-decoration: none;
+        font-family: inherit;
+        -webkit-transition: all 500ms ease-out;
+        -moz-transition: all 500ms ease-out;
+        -ms-transition: all 500ms ease-out;
+        -o-transition: all 500ms ease-out;
+        transition: all 500ms ease-out;
+    
+}
+.related{
+
+    border-top: 1px solid #000;
+    padding: 2em 1em;
+    
+}
+.container{
+    border-top: 1px solid #000;
+    padding: 2em 1em;
+}
+.relatedpro{
+    text-align: center;
+}
