--- a/src/app/core/components/shop-product-detail/shop-product-detail.component.html
+++ b/src/app/core/components/shop-product-detail/shop-product-detail.component.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   
   <section class="section pb-0">
     <div class="container">
@@ -7,7 +7,7 @@
           <owl-carousel-o id="customer-testi" [options]="customOptions">
             <ng-template carouselSlide>
               <div class="tiny-slide">
-                <div class="tiny-slide"><img src="assets/images/p4.jpg" class="img-fluid rounded"
+                <div  data-aos="fade-on"  data-aos-duration="3000" class="tiny-slide"><img src="assets/images/p4.jpg" class="img-fluid rounded"
                     alt=""></div>
               </div>
             </ng-template>
@@ -49,8 +49,11 @@
             <p class="text">Descripcion del producto </p>
             <p class="text">Producción</p>
             <br> <br> <br> <br> <br> <br>
-            <a routerLink="/shop-cart" class="btn btn-soft-primary ms-1">ADD TO WISHLIST</a>
-      
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >ADD TO WISHLIST</a>
+           <br> 
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >SHARE</a>
+            <br> 
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >REQUEST PRODUCT SHEET</a>
           </div>
           </div>
         </div>
@@ -62,10 +65,10 @@
     <!--end container-->
 
 
-    <div class="container mt-100 mt-60">
+    <div class="related full-width fadeOnScroll fadeOnScrollFromBottom in-view   container mt-100 mt-60">
       <div class="row">
         <div class="col-12">
-          <h5 class="mb-0">Related Products</h5>
+          <h5 class="relatedpro mb-0">Related Products</h5>
         </div>
         <!--end col-->
   
@@ -74,10 +77,10 @@
             <ng-template carouselSlide>
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
-                  <a routerLink="/shop-product-detail"><img src="assets/images/shop/product/s1.jpg" class="img-fluid"
+                  <a data-aos="fade-in"  routerLink="/shop-product-detail"><img src="assets/images/shop/product/s1.jpg" class="img-fluid"
                       alt=""></a>
                   <a routerLink="/shop-product-detail" class="overlay-work">
-                    <img src="assets/images/shop/product/s-1.jpg" class="img-fluid" alt="">
+                    <img   data-aos="fade-in" src="assets/images/shop/product/s-1.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
@@ -91,14 +94,14 @@
             <ng-template carouselSlide>
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
-                  <a routerLink="/shop-product-detail"><img src="assets/images/shop/product/s3.jpg" class="img-fluid"
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail"><img src="assets/images/shop/product/s3.jpg" class="img-fluid"
                       alt=""></a>
                   <a routerLink="/shop-product-detail" class="overlay-work">
                     <img src="assets/images/shop/product/s-3.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Watch</a>
+                  <a  data-aos="fade-in"  routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Watch</a>
                   <div class="d-flex justify-content-between mt-1">
                     <h6 class="text-muted small fst-italic mb-0 mt-1">$4.50 
                     </h6>
@@ -110,14 +113,14 @@
             <ng-template carouselSlide>
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
-                  <a routerLink="/shop-product-detail"><img src="assets/images/shop/product/s6.jpg" class="img-fluid"
+                  <a   data-aos="fade-in" routerLink="/shop-product-detail"><img src="assets/images/shop/product/s6.jpg" class="img-fluid"
                       alt=""></a>
                   <a routerLink="/shop-product-detail" class="overlay-work">
                     <img src="assets/images/shop/product/s-6.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Mug</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Mug</a>
                   <div class="d-flex justify-content-between mt-1">
                     <h6 class="text-muted small fst-italic mb-0 mt-1">$4.50 
                     </h6>
@@ -129,14 +132,14 @@
             <ng-template carouselSlide>
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
-                  <a routerLink="/shop-product-detail"><img src="assets/images/shop/product/s8.jpg" class="img-fluid"
+                  <a   data-aos="fade-in" routerLink="/shop-product-detail"><img src="assets/images/shop/product/s8.jpg" class="img-fluid"
                       alt=""></a>
                   <a routerLink="/shop-product-detail" class="overlay-work">
                     <img src="assets/images/shop/product/s-8.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a routerLink="/shop-product-detail" class="text-dark product-name h6">Wooden Stools</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Wooden Stools</a>
                   <div class="d-flex justify-content-between mt-1">
                     <h6 class="text-muted small fst-italic mb-0 mt-1">$22.00
                     </h6>
@@ -148,14 +151,14 @@
             <ng-template carouselSlide>
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
-                  <a routerLink="/shop-product-detail"><img src="assets/images/shop/product/s14.jpg" class="img-fluid"
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail"><img src="assets/images/shop/product/s14.jpg" class="img-fluid"
                       alt=""></a>
                   <a routerLink="/shop-product-detail" class="overlay-work">
                     <img src="assets/images/shop/product/s-14.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a routerLink="/shop-product-detail" class="text-dark product-name h6">Women Block Heels</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Women Block Heels</a>
                   <div class="d-flex justify-content-between mt-1">
                     <h6 class="text-muted small fst-italic mb-0 mt-1">$21.00 
                     </h6>
@@ -183,4 +186,8 @@
   </a>
   <!-- Back to top -->
   
-  
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
