--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -82,30 +82,14 @@
           <div id="navigation">
               <!-- Navigation Menu-->
             <div class="positionHeader">
-              <ul class="navigation-menu" [class]="navClass" style="font-family: 'PPEiko-Thin' !important;">
-                  <!-- <li><a routerLink="/" class="nav-link-ref">HOME</a></li> -->
-                  <li class="has-submenu">
-                     <!--  <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">CUSTOM-MADE</a><span class="menu-arrow"></span>
-                      <ul class="submenu">
-                          <li class="nav-link-ref">
-                              <a href="javascript:void(0)" style="color: #6A1B9A !important;"  routerLink="/custome-made">ART</a>
-                          </li>
-                          <li class="nav-link-ref">
-                              <a href="javascript:void(0)"  style="color: #2E7D32!important;" routerLink="/">PRODUCT</a>
-                          </li>
-                          <li class="nav-link-ref">
-                              <a href="javascript:void(0)"  style="color: #00838F !important;" routerLink="/">SPACE DESIGNE</a>
-                          </li>
-                      </ul>-->
-                  </li> 
-                  
+              <ul class="  navigation-menu" [class]="navClass" style="font-family: 'PPEiko-Thin' !important;">
                   <li class=" has-submenu ">
                       <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
                       <!-- MENU DE NORMAL -->
   
-                      <ul class=" menuGeneral submenu megamenu" style="background-color: #ffffff;">
+                      <ul class="  submenu megamenu " style="background-color: #ffffff;">
                         <li>
-                          <div class="contenedor1 " style="background-color: #ffffff ">
+                          <div style="background-color: #ffffff ">
                           <ul>
                             <li class="casamatersant megamenu-head " style="color: white !important;" >CASA MATERSANT</li>
                             <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
@@ -117,9 +101,8 @@
                           </ul>
                         </div>
                         </li>
-  
                         <li>
-                          <div class="contenedor2" style="background-color: #ffffff ">
+                          <div  style="background-color: #ffffff ">
                           <ul>
                             <li class="materiacurada megamenu-head"  style="color: white !important;" >MATERIA CURADA</li>
                             <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
@@ -128,10 +111,13 @@
                           </ul>
                         </div>
                         </li>
+                     
+
                       </ul>
 
   
                     </li>
+              
                 
                   <li class="has-submenu ">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)">SERVICES</a><span class="menu-arrow"></span>
