--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -88,8 +88,8 @@
                       <!-- MENU DE NORMAL -->
   
                       <ul class="  submenu megamenu " style="background-color: #ffffff;">
-                        <li>
-                          <div style="background-color: #ffffff ">
+                        <li style="width: 48%;">
+                          <div class="matersant" style=" background-color: #ffffff ">
                           <ul>
                             <li class="casamatersant megamenu-head " style="color: white !important;" >CASA MATERSANT</li>
                             <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
@@ -99,10 +99,11 @@
                             <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
                             <li><a class="nav-link-ref" routerLink="/index-upcycle">NFT</a></li>
                           </ul>
+                          
                         </div>
                         </li>
-                        <li>
-                          <div  style="background-color: #ffffff ">
+                        <li style="width: 48%;">
+                          <div class="mcurada" style="background-color: #ffffff ">
                           <ul>
                             <li class="materiacurada megamenu-head"  style="color: white !important;" >MATERIA CURADA</li>
                             <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
@@ -121,20 +122,19 @@
                 
                   <li class="has-submenu ">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)">SERVICES</a><span class="menu-arrow"></span>
-                    <!-- MENU DE NORMAL -->
-
-                    <ul class="submenu megamenu" style="background-color: #bebebe;">
-
-                      <li>
-                        <div class="contenedor3" style="background-color: #ffffff ">
+                    <ul class="submenu megamenu" style="background-color: #ffffff ;">
+ 
+                      <li style="width: 32%;">
+                        <div class="contenedor3">
                         <ul>
-                          <li class="productdesign megamenu-head"  style="color: white !important;" >PRODUCT DESIGN</li>
+                          <li class="productdesign megamenu-head"  style="color: white !important" >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="/custome-made">CUSTOM-MAKE YOUR OWN PIECE</a></li>
                         </ul>
                       </div>
                       </li>
-                      <li>
+                  
+                      <li style="width: 32%;">
                         <div class="contenedor4" style="background-color: #ffffff ">
                         <ul>
                           <li class="interiordesign megamenu-head"   style="color: white !important;" >INTERIOR DESIGN</li>
@@ -143,7 +143,7 @@
                         </ul>
                       </div>
                       </li>
-                      <li>
+                      <li style="width: 32%;">
                         <div class="contenedor5" style="background-color: #ffffff ">
                         <ul>
                           <li class="art megamenu-head"  style="color: white !important;">ART</li>
@@ -156,6 +156,8 @@
                         </ul>
                       </div>
                       </li>
+                    
+
                     </ul>
 
                     <!-- MENU DE MOVIL -->
