--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -88,7 +88,7 @@
                       <!-- MENU DE NORMAL -->
   
                       <ul class="  submenu megamenu " style="background-color: #ffffff;">
-                        <div class="cerrar" id ="cerrart"> <a  href="javascript:void(0)" (click)  = "closeMenuClick($event)"> </a> <img src="assets/images/x1.png"></div>
+                        <div class="cerrar"  id ="cerrart"> <a href ="javascript:cerrar()"> </a> <!--<img src="assets/images/x1.png">--></div>  
                         <li style="width: 50%;">
                           <div class="matersant" style=" background-color: #ffffff ">
                           <ul>
@@ -125,7 +125,7 @@
                
                
                     <ul class="submenu megamenu" style="background-color: #ffffff ;">
-                      <div class="cerrar"  id ="cerrart"> <a href ="cerrar()"> </a> <img src="assets/images/x1.png"></div>
+                      <div class="cerrar"  id ="cerrart"> <a href ="javascript:cerrar()"> </a><!--<img src="assets/images/x1.png">--></div>
                       <li  style="width: 33%; border-right: 1px solid rgb(151, 150, 150);">
                         <div class="contenedor3">
                         <ul>
