--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -63,7 +63,7 @@
         </footer>
         <!-- Footer End -->
     </div>
-    <ng-template #execute_block>
+   <!-- <ng-template #execute_block>
         <footer style="background-color: #c9e1f1;" class="footer">
             <div class="container">
                 <div class="row">
@@ -72,14 +72,14 @@
                       
                         <!--end icon-->
                     </div>
-                    <!--end col-->
+                    <!--end col--
 
                     <div class="">
     
                         <form>
                          <div class="row">
                                 
-                                <!--end col-->
+                                <!--end col--
                                 <div class="col-md-6">
                                   <div class="mb-3">
                                     <label class="form-label">Your Name <span class="text-danger">*</span></label>
@@ -89,7 +89,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <!--end col-->
+                                <!--end col--
                                 <div class="col-md-6">
                                   <div class="mb-3">
                                     <label class="form-label">Your Email <span class="text-danger">*</span></label>
@@ -100,27 +100,27 @@
                                     </div>
                                   </div>
                                 </div>
-                                <!--end col-->
+                                <!--end col--
                                 <div class="row">
                                   <div class="col-sm-12">
                                     <input type="submit" id="submit" name="send" class="btn btn-primary" value="Suscribe">
                                   </div>
-                                  <!--end col-->
+                                  <!--end col--
                                 </div>
                             </div>
-                            <!--end row-->
+                            <!--end row--
                           
                         </form>
                 
                     </div>
-                    <!--end col-->
+                    <!--end col--
                 </div>
-                <!--end row-->
+                <!--end row--
             </div>
-            <!--end container-->
+            <!--end container--
             
         </footer>
-    </ng-template>
+    </ng-template>  --
 </div>
 <!--end footer-->
 <footer class="footer footer-bar">
